# rs-async-zip

./: .gitignore  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci-clippy.yml  ci-fmt.yml  ci-linux.yml  ci-typos.yml  ci-wasm.yml  release-prepare.yml  release.yml  zizmor.yml
scripts/: release.py
src/: error.rs  lib.rs
src/base/: mod.rs
src/base/read/: cd.rs  counting.rs  mem.rs  mod.rs  seek.rs  stream.rs
src/base/read/io/: combined_record.rs  compressed.rs  entry.rs  hashed.rs  mod.rs
src/base/write/: compressed_writer.rs  entry_seekable.rs  entry_stream.rs  entry_whole.rs  mod.rs
src/base/write/io/: offset.rs
src/date/: mod.rs
src/entry/: builder.rs  mod.rs
src/file/: mod.rs
src/spec/: compression.rs  consts.rs  data_descriptor.rs  extra_field.rs  header.rs  mod.rs  parse.rs  version.rs
src/tests/: mod.rs
src/tests/read/: encryption.rs  mod.rs  stream.rs  version.rs
src/tests/read/cd/: mod.rs
src/tests/read/locator/: mod.rs
src/tests/read/zip64/: mod.rs
src/tests/spec/: date.rs
src/tests/write/: mod.rs
src/tests/write/zip64/: mod.rs
src/tokio/: mod.rs
tests/: decompress_test.rs
tests/common/: mod.rs
